# painting-tutor

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml
.github/workflows/: ci.yaml
src/painting_tutor/: edges.py  images.py  logs.py  model.py  segmentation.py  visualization.py
src/painting_tutor/app/: app.py  components.py  process.py  utils.py
tests/: test_placeholder.py
