[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "painting_tutor"

dependencies = [
    "segment-anything",
    "supervision",
    "torch",
    "torchvision",
    "matplotlib",
    "scikit-learn",
    "streamlit",
    "python-dotenv",
]
requires-python = ">=3.11"
authors = [
    {name = "Yke"},
]
description = "Painting tutor"
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ipykernel==6.29.3",
    "pytest==8.1.1",
    "pre-commit==3.6.2",
]

[tool.ruff]
line-length = 100
lint.select = ["I"]
src = ["src"]

[tool.black]
line-length = 100
