[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "painting_tutor"

dependencies = [
    "segment-anything>=1.0",
    "supervision>=0.20.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.37.0",
]
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Yke"},
]
description = "Painting tutor"
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ipykernel==6.29.3",
    "pytest==8.1.1",
    "pre-commit==3.6.2",
]

[tool.ruff]
line-length = 100
lint.select = ["I"]
src = ["src"]

[tool.black]
line-length = 100
